--- a/lms/static/sass/shared/_footer-edx.scss
+++ b/lms/static/sass/shared/_footer-edx.scss
@@ -19,6 +19,92 @@ footer#footer-edx-v3 {
   padding: $baseline*0.75 0;
   border-top: 1px solid $courseware-button-border-color;
 
+  .column-1 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .column-2 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .column-3 {
+    flex: 0 0 50%;
+    max-width: 50%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .column-2-1 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    //flex-basis: auto;
+  }
+
+  .column-2-2 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    //flex-basis: auto;
+  }
+
+  .column-3 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .column-3-1 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .column-3-2 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  a.social-links {
+    font-size: 35px;
+  }
+
   .first-div-border {
     @include border-left(1px solid $courseware-button-border-color);
   }
@@ -42,6 +128,24 @@ footer#footer-edx-v3 {
     display: -ms-flexbox;
     display: flex;
     flex-wrap: wrap;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+  }
+
+
+  .list-unstyled {
+    list-style: none;
+
+    @include padding-left(0);
   }
 
   .flex-column {
@@ -95,6 +199,7 @@ footer#footer-edx-v3 {
     @include margin-left(8px);
 
     border-bottom: 1px solid $courseware-button-border-color;
+    line-height: 24px;
   }
 
   .footer-language-selector {
@@ -105,6 +210,10 @@ footer#footer-edx-v3 {
     margin-top: $baseline*0.75;
     height: auto;
     display: inline-flex;
+  }
+
+  .app-link img {
+    height: 35px;
   }
 
   .social {
@@ -321,6 +430,100 @@ footer#footer-edx-v3 {
   @include media-breakpoint-up(sm) {
     padding: $baseline $baseline*0.5;
 
+    .column-1 {
+      flex: 0 0 58.33333%;
+      max-width: 58.33333%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-2 {
+      flex: 0 0 50%;
+      max-width: 50%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-3 {
+      flex: 0 0 50%;
+      max-width: 50%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-2-1 {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+      //flex-basis: auto;
+    }
+
+    .column-2-2 {
+      flex: 0 0 80%;
+      max-width: 80%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+
+      @include margin-left(10%);
+      //flex-basis: auto;
+    }
+
+    .column-3-1 {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-3-2 {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    ul.social {
+      padding: 0;
+      margin: 0;
+      list-style-type: none;
+      margin-top: 15px;
+    }
+
+    .logo-div {
+      @include margin-left(7%);
+
+      display: inline-flex;
+    }
+
+    ul.social li {
+      width: 65px;
+      height: 35px;
+      float: left;
+      margin-left: 7px;
+    }
+
     div.container {
       min-width: 0;
       padding: 0;
@@ -334,19 +537,19 @@ footer#footer-edx-v3 {
     .first-div-border div div {
       border-bottom: 1px solid $courseware-button-border-color;
 
-      @include margin-left(7px);
+      @include margin-left(10%);
     }
 
     .second-div-border div div {
       border-bottom: 1px solid $courseware-button-border-color;
 
-      @include margin-left(7px);
+      @include margin-left(10%);
     }
 
     .third-div-border div div {
       border-bottom: none;
 
-      @include margin-left(7px);
+      @include margin-left(10%);
     }
 
     .second-div-border {
@@ -380,7 +583,7 @@ footer#footer-edx-v3 {
     }
 
     .app-link img {
-      height: 40px;
+      height: 35px;
       margin-top: 10px;
     }
 
@@ -392,24 +595,96 @@ footer#footer-edx-v3 {
       @include margin-left($baseline*0.25);
     }
 
-    .social {
-      display: inline;
-      margin-top: 0;
-    }
-
-
     .footer-language-selector {
       display: inline-block;
       float: none;
     }
-
-    ul.social li {
-      display: inline;
-      width: 0;
-    }
   }
 
   @include media-breakpoint-up(md) {
+    .ml-auto {
+      margin-left: auto !important;
+    }
+
+    .footer-language-selector {
+      display: inline-block;
+      width: max-content;
+    }
+
+    .column-1 {
+      flex: 0 0 25%;
+      max-width: 25%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-2 {
+      flex: 0 0 75%;
+      max-width: 75%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-2-2 {
+      flex: 0 0 80%;
+      max-width: 80%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+
+      @include margin-left(0);
+      //flex-basis: auto;
+    }
+
+    .column-3 {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-2-1 {
+      flex: 0 0 33.3333%;
+      max-width: 33.3333%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+      //flex-basis: auto;
+    }
+
+    .column-3-1 {
+      flex: 0 0 75%;
+      max-width: 75%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-3-2 {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
     .edx-footer-logo {
       display: inline-flex;
 
@@ -469,19 +744,22 @@ footer#footer-edx-v3 {
       margin-top: 15px;
       border-bottom: none;
     }
-
-    .app-link img {
-      height: 40px;
-    }
-
-    a.social-links {
-      @include font-size(40);
-    }
+    //
+    //.app-link img {
+    //  height: 40px;
+    //}
+    //
+    //a.social-links {
+    //  @include font-size(40);
+    //}
 
     .social {
       display: inline-flex;
       vertical-align: middle;
-      margin-top: 18px;
+    }
+
+    ul.social {
+      margin-top: 29px;
     }
 
     .app-links {
@@ -516,7 +794,81 @@ footer#footer-edx-v3 {
   @include media-breakpoint-up(lg) {
     padding: $baseline $baseline*0.5;
 
-    .margin {
+    .column-1 {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-2 {
+      flex: 0 0 66.66667%;
+      max-width: 66.66667%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-3 {
+      flex: 0 0 33.3333%;
+      max-width: 33.3333%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-2-1 {
+      flex: 0 0 33.3333%;
+      max-width: 33.3333%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+      //flex-basis: auto;
+    }
+
+    .column-2-2 {
+      flex: 0 0 80%;
+      max-width: 80%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+
+      @include margin-left(0);
+      //flex-basis: auto;
+    }
+
+    .column-3-1 {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-3-2 {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .edx-footer-logo {
       @include margin-left($baseline);
     }
 
@@ -580,13 +932,13 @@ footer#footer-edx-v3 {
       border-bottom: none;
     }
 
-    .app-link img {
-      height: 40px;
-    }
-
-    a.social-links {
-      @include font-size(40);
-    }
+    //.app-link img {
+    //  height: 40px;
+    //}
+    //
+    //a.social-links {
+    //  @include font-size(40);
+    //}
 
     .social {
       display: inline-flex;
@@ -612,6 +964,7 @@ footer#footer-edx-v3 {
 
     .col-xl-2 .footer-language-selector {
       display: inline-block;
+      width: max-content;
     }
 
     ul.social li {
@@ -627,6 +980,81 @@ footer#footer-edx-v3 {
     .first-div-border {
       @include border-left(1px solid $courseware-button-border-color);
     }
+
+    .column-1 {
+      flex: 0 0 16.6667%;
+      max-width: 16.6667%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-2 {
+      flex: 0 0 50%;
+      max-width: 50%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-3 {
+      flex: 0 0 33.3333%;
+      max-width: 33.3333%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-2-1 {
+      flex: 0 0 33.3333%;
+      max-width: 33.3333%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+      //flex-basis: auto;
+    }
+
+    .column-2-2 {
+      flex: 0 0 80%;
+      max-width: 80%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+
+      @include margin-left(0%);
+      //flex-basis: auto;
+    }
+
+    .column-3-1 {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .column-3-2 {
+      flex: 0 0 100%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      min-height: 1px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
 
     .second-div-border {
       @include border-left(1px solid $courseware-button-border-color);
@@ -700,6 +1128,6 @@ footer#footer-edx-v3 {
       cursor: initial;
     }
   }
-  
+
   @extend %ui-print-excluded;
 }
