--- a/lms/static/sass/shared/_footer-edx.scss
+++ b/lms/static/sass/shared/_footer-edx.scss
@@ -22,6 +22,9 @@ footer#footer-edx-v3 {
   .column-1 {
     flex: 0 0 100%;
     max-width: 100%;
+  }
+
+  .column-styles {
     position: relative;
     width: 100%;
     min-height: 1px;
@@ -32,73 +35,36 @@ footer#footer-edx-v3 {
   .column-2 {
     flex: 0 0 100%;
     max-width: 100%;
-    position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
   }
 
   .column-3 {
     flex: 0 0 50%;
     max-width: 50%;
-    position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
   }
 
   .column-2-1 {
     flex: 0 0 100%;
     max-width: 100%;
-    position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
-    //flex-basis: auto;
   }
 
   .column-2-2 {
     flex: 0 0 100%;
     max-width: 100%;
-    position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
-    //flex-basis: auto;
   }
 
   .column-3 {
     flex: 0 0 100%;
     max-width: 100%;
-    position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
   }
 
   .column-3-1 {
     flex: 0 0 100%;
     max-width: 100%;
-    position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
   }
 
   .column-3-2 {
     flex: 0 0 100%;
     max-width: 100%;
-    position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
   }
 
   a.social-links {
@@ -106,19 +72,19 @@ footer#footer-edx-v3 {
   }
 
   .first-div-border {
-    @include border-left(1px solid $courseware-button-border-color);
+    @include border-left(none);
   }
 
   .second-div-border {
-    @include border-left(1px solid $courseware-button-border-color);
+    @include border-left(none);
   }
 
   .third-div-border {
-    @include border-left(1px solid $courseware-button-border-color);
+    @include border-left(none);
   }
 
   .fourth-div-border {
-    @include border-left(1px solid $courseware-button-border-color);
+    @include border-left(none);
   }
 
 
@@ -137,8 +103,8 @@ footer#footer-edx-v3 {
   .row {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right : -15px;
+    margin-left : -15px;
   }
 
 
@@ -199,7 +165,7 @@ footer#footer-edx-v3 {
     @include margin-left(8px);
 
     border-bottom: 1px solid $courseware-button-border-color;
-    line-height: 24px;
+    line-height: 1.5em;
   }
 
   .footer-language-selector {
@@ -433,75 +399,38 @@ footer#footer-edx-v3 {
     .column-1 {
       flex: 0 0 58.33333%;
       max-width: 58.33333%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-2 {
       flex: 0 0 50%;
       max-width: 50%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-3 {
       flex: 0 0 50%;
       max-width: 50%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-2-1 {
       flex: 0 0 100%;
       max-width: 100%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
-      //flex-basis: auto;
     }
 
     .column-2-2 {
       flex: 0 0 80%;
       max-width: 80%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
 
       @include margin-left(10%);
-      //flex-basis: auto;
     }
 
     .column-3-1 {
       flex: 0 0 100%;
       max-width: 100%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-3-2 {
       flex: 0 0 100%;
       max-width: 100%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     ul.social {
@@ -560,6 +489,10 @@ footer#footer-edx-v3 {
       @include border-left(none);
     }
 
+    .fourth-div-border {
+      @include border-left(1px solid $courseware-button-border-color);
+    }
+
     .site-details {
       @include span-columns(8);
     }
@@ -603,7 +536,7 @@ footer#footer-edx-v3 {
 
   @include media-breakpoint-up(md) {
     .ml-auto {
-      margin-left: auto !important;
+      margin-left: auto;
     }
 
     .footer-language-selector {
@@ -614,75 +547,43 @@ footer#footer-edx-v3 {
     .column-1 {
       flex: 0 0 25%;
       max-width: 25%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-2 {
       flex: 0 0 75%;
       max-width: 75%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-2-2 {
       flex: 0 0 80%;
       max-width: 80%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
 
       @include margin-left(0);
-      //flex-basis: auto;
     }
 
     .column-3 {
       flex: 0 0 100%;
       max-width: 100%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-2-1 {
       flex: 0 0 33.3333%;
       max-width: 33.3333%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
-      //flex-basis: auto;
+    }
+
+    .column-2-2 {
+      flex: 0 0 100%;
+      max-width: 100%;
     }
 
     .column-3-1 {
       flex: 0 0 75%;
       max-width: 75%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-3-2 {
       flex: 0 0 100%;
       max-width: 100%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .edx-footer-logo {
@@ -701,10 +602,14 @@ footer#footer-edx-v3 {
 
     .first-div-border div div {
       border-bottom: none;
+
+      @include margin-left(0);
     }
 
     .second-div-border div div {
       border-bottom: none;
+
+      @include margin-left(0);
     }
 
     .second-div-border {
@@ -715,10 +620,6 @@ footer#footer-edx-v3 {
 
     .third-div-border {
       @include border-left(1px solid $courseware-button-border-color);
-    }
-
-    .fourth-div-border {
-      @include border-left(none);
     }
 
     padding: $baseline $baseline*0.5;
@@ -744,14 +645,6 @@ footer#footer-edx-v3 {
       margin-top: 15px;
       border-bottom: none;
     }
-    //
-    //.app-link img {
-    //  height: 40px;
-    //}
-    //
-    //a.social-links {
-    //  @include font-size(40);
-    //}
 
     .social {
       display: inline-flex;
@@ -797,75 +690,38 @@ footer#footer-edx-v3 {
     .column-1 {
       flex: 0 0 100%;
       max-width: 100%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-2 {
       flex: 0 0 66.66667%;
       max-width: 66.66667%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-3 {
       flex: 0 0 33.3333%;
       max-width: 33.3333%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-2-1 {
       flex: 0 0 33.3333%;
       max-width: 33.3333%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
-      //flex-basis: auto;
     }
 
     .column-2-2 {
-      flex: 0 0 80%;
-      max-width: 80%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
+      flex: 0 0 100%;
+      max-width: 100%;
 
       @include margin-left(0);
-      //flex-basis: auto;
     }
 
     .column-3-1 {
       flex: 0 0 100%;
       max-width: 100%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-3-2 {
       flex: 0 0 100%;
       max-width: 100%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .edx-footer-logo {
@@ -932,14 +788,6 @@ footer#footer-edx-v3 {
       border-bottom: none;
     }
 
-    //.app-link img {
-    //  height: 40px;
-    //}
-    //
-    //a.social-links {
-    //  @include font-size(40);
-    //}
-
     .social {
       display: inline-flex;
       vertical-align: middle;
@@ -984,55 +832,30 @@ footer#footer-edx-v3 {
     .column-1 {
       flex: 0 0 16.6667%;
       max-width: 16.6667%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
+
     }
 
     .column-2 {
       flex: 0 0 50%;
       max-width: 50%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     .column-3 {
       flex: 0 0 33.3333%;
       max-width: 33.3333%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
+
     }
 
     .column-2-1 {
       flex: 0 0 33.3333%;
       max-width: 33.3333%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
-      //flex-basis: auto;
     }
 
     .column-2-2 {
-      flex: 0 0 80%;
-      max-width: 80%;
-      position: relative;
-      width: 100%;
-      min-height: 1px;
-      padding-right: 15px;
-      padding-left: 15px;
+      flex: 0 0 100%;
+      max-width: 100%;
 
       @include margin-left(0%);
-      //flex-basis: auto;
     }
 
     .column-3-1 {
