--- a/themes/edx.org/lms/templates/footer.html
+++ b/themes/edx.org/lms/templates/footer.html
@@ -23,9 +23,9 @@
 
 <div class="container">
     <div class="row main-row"><!-- row -->
-        <div class="col-xl-2 col-lg-12 col-md-3 col-sm-8 col-xs-10 column-1 flex-column">
+        <div class="col-xl-2 col-lg-12 col-md-3 col-sm-8 col-xs-10 column-1 flex-column column-styles">
             <div class="row">
-                <div class="col-12 column-2-2">
+                <div class="col-12 column-2-2 column-styles">
                 <div class="edx-footer-logo">
                     <a href="${marketing_link('ROOT')}">
                         <img alt="${_('edX Home Page')}" src="${footer['logo_image']}">
@@ -40,12 +40,12 @@
             </div>
 
         </div>
-        <div class="col-xl-6 col-lg-8 col-md-9 col-sm-5 col-xs-12 column-2 flex-column">
+        <div class="col-xl-6 col-lg-8 col-md-9 col-sm-5 col-xs-12 column-2 flex-column column-styles">
              <div class="row full-height">
 
-                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 column-2-1 col-xs-12 first-div-border ">
+                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 column-2-1 col-xs-12 first-div-border column-styles ">
                     <div class="row full-height">
-                        <div class="ml-xl-0 col-lg-10 ml-lg-auto col-md-12 column-2-2 col-sm-10 full-height">
+                        <div class="ml-xl-0 col-lg-10 ml-lg-auto col-md-12 column-2-2 col-sm-10 full-height column-styles">
                               <h2 class="heading">edX</h2>
                                   <ul class="list-unstyled clear-margins  ">
                                       % for link in footer["business_links"]:
@@ -57,9 +57,9 @@
                         </div>
                     </div>
                  </div>
-                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 column-2-1 second-div-border ">
+                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 column-2-1 second-div-border column-styles ">
                         <div class="row full-height">
-                            <div class="col-lg-12 col-md-12 col-sm-10 column-2-2 full-height">
+                            <div class="col-lg-12 col-md-12 col-sm-10 column-2-2 full-height column-styles">
                                   <h2 class="heading">Legal</h2>
                                     <ul class="list-unstyled clear-margins  ">
                                         % for link in footer["more_info_links"]:
@@ -71,9 +71,9 @@
                             </div>
                           </div>
                 </div>
-                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 column-2-1 third-div-border ">
+                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 column-2-1 third-div-border column-styles">
                       <div class="row full-height">
-                        <div class="col-lg-12 col-md-12 col-sm-10 full-height column-2-2">
+                        <div class="col-lg-12 col-md-12 col-sm-10 full-height column-2-2 column-styles">
                               <h2 class="heading">Connect</h2>
                               <ul class="list-unstyled clear-margins  ">
                                 % for link in footer["connect_links"]:
@@ -90,7 +90,7 @@
               ## The Open edX link may be hidden when this view is served
               ## through an API to partner sites (such as marketing sites or blogs),
               ## which are not technically powered by Open edX.
-            % if not hide_openedx_link:
+            % if not hide_openedx_link and hide_openedx_link != Undefined:
                   <div class="openedx-link">
                     <a href="${footer['openedx_link']['url']}" title="${footer['openedx_link']['title']}">
                       <img alt="${footer['openedx_link']['title']}" src="${footer['openedx_link']['image']}" width="140">
@@ -102,11 +102,11 @@
 
             </div>
         </div>
-        <div class="col-xl-4 col-lg-4 col-md-9 ml-md-auto col-sm-7 column-3 flex-column fourth-div-border">
+        <div class="col-xl-4 col-lg-4 col-md-9 ml-md-auto col-sm-7 column-3 flex-column fourth-div-border column-styles">
                 <div class="row">
-                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 column-3-1 social-app-links-div ml-auto">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 column-3-1 social-app-links-div column-styles ml-auto">
                       <div class="row">
-                        <div class="col-lg-12 col-md-12 column-3-2">
+                        <div class="col-lg-12 col-md-12 column-3-2 column-styles">
                              <ul class="list-inline list-unstyled social">
                                     % for link in footer['social_links']:
                                     <li>
